# gpgpu-sim_simulations

benchmarks/: .gitignore  clean_data.sh  export_data.sh  get_data.sh
benchmarks/app-specific-gpgpu-sim-options/testJoin-cdp/: benchmark_options.txt
benchmarks/data_dirs/: clean_data.sh  get_data.sh
benchmarks/data_dirs/cuda/rodinia/2.0-ft/: get_data.sh
benchmarks/src/: .gitignore  Makefile  Makefile.PTX5  README.md  setup_environment
benchmarks/src/cuda/common/: common.mk
benchmarks/src/cuda/common/inc/: cutil_math.h
benchmarks/src/cuda/cudnn/mnist/: Makefile  README  README.md  error_util.h  fp16_dev.cu  fp16_emu.cpp  fp16_emu.h  gemv.h  mnistCUDNN.cpp  readme.txt
benchmarks/src/cuda/custom-apps/rodinia-kmn-no-tex/: Makefile  kmeans.c  kmeans_clustering.c  kmeans_cuda.cu  kmeans_cuda_kernel.cu
benchmarks/src/cuda/custom-apps/sdk-matrixMul-modified/: Makefile  cuda_mult.cu
benchmarks/src/cuda/custom-apps/shoc-modified-spmv/: Makefile  spmv-modified.cu
benchmarks/src/cuda/dragon_li/: .gitignore  .gitmodules  LICENSE  README.md  config_fermi_islip.icnt  configure.h  sconscript  sconstruct
benchmarks/src/cuda/dragon_li/hydrazine/: Makefile.am  README.md  configure.ac  configure.h.in
benchmarks/src/cuda/dragon_li/hydrazine/hydrazine/implementation/: Test.cpp
benchmarks/src/cuda/dragon_li/hydrazine/regression/: tests.txt
benchmarks/src/cuda/dragon_li/tests/: Makefile  testAmr.cu  testBfs.cu  testJoin.cu  testSssp.cu
benchmarks/src/cuda/gpuwattch-ubench/: Makefile  directory.list  replace_iterations.sh  restore_backups.sh
benchmarks/src/cuda/gpuwattch-ubench/active_cores/: average.sh  get_avg.sh  run_power_sim.sh  ~
benchmarks/src/cuda/gpuwattch-ubench/functional_benchmarks/: hardware_col_1_avg.sh  hardware_col_sum_avg.sh  launch-all.sh  update_sim.sh
benchmarks/src/cuda/gpuwattch-ubench/include/: ContAcq-IntClkHW.h  REPEATR.h  REPEATW.h  repeat2.h
benchmarks/src/cuda/gpuwattch-ubench/mix_benchmarks/: get_avg.sh  get_kernels.sh  run_power.sh  run_power_simq.sh  torque.sh  update_simq.sh
benchmarks/src/cuda/ispass-2009/AES/: Makefile  README.GPGPU-Sim
benchmarks/src/cuda/ispass-2009/BFS/: Makefile  README.GPGPU-Sim
benchmarks/src/cuda/ispass-2009/CP/: README.GPGPU-Sim
benchmarks/src/cuda/ispass-2009/DG/: Makefile  MakefileCPU2d  MakefileGPU2d  README.GPGPU-Sim
benchmarks/src/cuda/ispass-2009/LIB/: Makefile  README.GPGPU-Sim  libor.cu
benchmarks/src/cuda/ispass-2009/LPS/: Makefile  README.GPGPU-Sim  laplace3d.cu
benchmarks/src/cuda/ispass-2009/MUM/: Makefile  PoolMalloc.cpp  README.GPGPU-Sim  mummergpu.cu  mummergpu_gold.cpp  mummergpu_main.cpp  suffix-tree.cpp
benchmarks/src/cuda/ispass-2009/NN/: Makefile  README.GPGPU-Sim
benchmarks/src/cuda/ispass-2009/NQU/: Makefile  README.GPGPU-Sim
benchmarks/src/cuda/ispass-2009/RAY/: Makefile  README.GPGPU-Sim  rayTracing_kernel.cu
benchmarks/src/cuda/ispass-2009/STO/: Makefile  README.GPGPU-Sim
benchmarks/src/cuda/ispass-2009/WP/: README.GPGPU-Sim  makefile
benchmarks/src/cuda/lonestargpu-2.0/: Makefile  README  bin
benchmarks/src/cuda/lonestargpu-2.0/apps/: common.mk
benchmarks/src/cuda/lonestargpu-2.0/include/: common.h  component.h  cutil_subset.h  graph.h  header.h  kernelconfig.h  list.h  lonestargpu.h  sharedptr.h  util.h  worklist.h  worklistc.h
benchmarks/src/cuda/lonestargpu-2.0/tests/: Makefile  test_sharedptr.cu
benchmarks/src/cuda/microbench/: Makefile  oo-vfunc-test.cu  tensorcore_test.cu
benchmarks/src/cuda/pannotia/: .hgignore  buildall.sh  cleanall.sh
benchmarks/src/cuda/pannotia/.hg/: dirstate  hgrc  undo.desc
benchmarks/src/cuda/pannotia/bc/: BC.cu  BC.h  Makefile  kernel.cu
benchmarks/src/cuda/pannotia/color/: Makefile  coloring_max.cu  coloring_maxmin.cu  kernel_max.cu  kernel_maxmin.cu
benchmarks/src/cuda/pannotia/common/: alignHack.py  common.mk  sizeHack.py
benchmarks/src/cuda/pannotia/fw/: Floyd-Warshall-Block.cu  Floyd-Warshall.cu  Makefile  kernel.cu  kernel_block.cu  parse.cpp  parse.h
benchmarks/src/cuda/pannotia/graph_parser/: parse.cpp  parse.h  util.cpp  util.h
benchmarks/src/cuda/pannotia/mis/: Makefile  kernel.cu  mis.cu
benchmarks/src/cuda/pannotia/pagerank/: Makefile  kernel.cu  kernel_spmv.cu  pagerank.cu  pagerank_spmv.cu
benchmarks/src/cuda/pannotia/sssp/: Makefile  kernel.cu  sssp_csr.cu  sssp_ell.cu
benchmarks/src/cuda/parboil/: datasets
benchmarks/src/cuda/parboil/common/: Makefile.conf
benchmarks/src/cuda/parboil/driver/: process.py
benchmarks/src/cuda/polybench-gpu-1.0/: README.txt
benchmarks/src/cuda/polybench-gpu-1.0/CUDA/: common.mk  compileCodes.sh
benchmarks/src/cuda/polybench-gpu-1.0/HmppDefaultAndOptimized/: compileCodes.sh
benchmarks/src/cuda/polybench-gpu-1.0/OpenCL/: common.mk
benchmarks/src/cuda/proxy-apps-doe/cns/: compile.bash  prototype.cu  prototype_simple.cu  run.bash
benchmarks/src/cuda/proxy-apps-doe/comd/: Makefile  README.txt  clean.sh  cmd_compile.sh  cmd_run_large.sh  cmd_run_large_ws_off.sh  cmd_run_medium.sh  cmd_run_medium_ws_off.sh  cmd_run_small.sh  comd_stats  compute_force_common.h  compute_force_kernels.cu  distance.h  driver.cpp  eam_cta_box.h  eam_cta_box_agg.h  eam_thread_atom.h  eam_thread_atom_warp_sync.h  ecx_run_1sm_job.sh  ecx_run_1tpc_job.sh  gpgpu_inst_stats.txt  help.txt  interface.h  lj_thread_atom.h  output-gpu.csv  potentials.h  timestep_kernels.cu  utility.cpp  utility.h
benchmarks/src/cuda/proxy-apps-doe/lulesh/: Makefile  lulesh.cu
benchmarks/src/cuda/proxy-apps-doe/minife_matvec_ell/: 32x32x32_run_ell.sh  64x64x64_run_ell.sh  Makefile  cuda.cu  kernels.h  ld_functions.h  main-orig.cu  main.cu  matrix-orig.h  matrix.h  shfl.h  ~
benchmarks/src/cuda/proxy-apps-doe/xsbench/: CalculateXS.c  Main.c  XSbench_header.h  XSutils.c  compile.bash  cudaCalcXs-app-ann-correct.cu  cudaCalcXs-app-ann.cu  cudaCalcXs-orig.cu  cudaHeader.h  makefile  run.bash  (+2 more)
benchmarks/src/cuda/shoc-master/: Makefile.in  configure
benchmarks/src/cuda/tensorcore-microbenchmarks/: README  README.md
benchmarks/src/rodinia/2.0-ft/: README.md
util/job_launching/: get_stats.py
(+1650 files in other folders)
